Handle more openapi spec parameters
