# api/openapi.json
@@ -294,6 +294,15 @@
             }
           },
           {
+            "name": "titles",
+            "in": "query",
+            "description": "One of the professor's title",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
             "name": "email",
             "in": "query",
             "description": "The professor's email address",
@@ -351,6 +360,96 @@
             "name": "image_uri",
             "in": "query",
             "description": "A link to the image used for the professor on the professor's official university profile",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "office_hours.start_date",
+            "in": "query",
+            "description": "The start date of one of the office hours meetings of the professor",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "office_hours.end_date",
+            "in": "query",
+            "description": "The end date of one of the office hours meetings of the professor",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "office_hours.meeting_days",
+            "in": "query",
+            "description": "One of the days that one of the office hours meetings of the professor",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "office_hours.start_time",
+            "in": "query",
+            "description": "The time one of the office hours meetings of the professor starts",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "office_hours.end_time",
+            "in": "query",
+            "description": "The time one of the office hours meetings of the professor ends",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "office_hours.modality",
+            "in": "query",
+            "description": "The modality of one of the office hours meetings of the professor",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "office_hours.location.building",
+            "in": "query",
+            "description": "The building of one of the office hours meetings of the professor",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "office_hours.location.room",
+            "in": "query",
+            "description": "The room of one of the office hours meetings of the professor",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "office_hours.location.map_uri",
+            "in": "query",
+            "description": "A hyperlink to the UTD room locator of one of the office hours meetings of the professor",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sections",
+            "in": "query",
+            "description": "The _id of one of the sections the professor teaches",
             "required": false,
             "schema": {
               "type": "string"
@@ -439,7 +538,52 @@
           {
             "name": "academic_session.end_date",
             "in": "query",
-            "description": "The date of classes ending  for the section",
+            "description": "The date of classes ending for the section",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "professors",
+            "in": "query",
+            "description": "One of the professors teaching the section",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "teaching_assistants.first_name",
+            "in": "query",
+            "description": "The first name of one of the teaching assistants of the section",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "teaching_assistants.last_name",
+            "in": "query",
+            "description": "The last name of one of the teaching assistants of the section",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "teaching_assistants.role",
+            "in": "query",
+            "description": "The role of one of the teaching assistants of the section",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "teaching_assistants.email",
+            "in": "query",
+            "description": "The email of one of the teaching assistants of the section",
             "required": false,
             "schema": {
               "type": "string"
@@ -458,6 +602,96 @@
             "name": "instruction_mode",
             "in": "query",
             "description": "The instruction modality for this section",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "meetings.start_date",
+            "in": "query",
+            "description": "The start date of one of the section's meetings",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "meetings.end_date",
+            "in": "query",
+            "description": "The end date of one of the section's meetings",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "meetings.meeting_days",
+            "in": "query",
+            "description": "One of the days that one of the section's meetings",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "meetings.start_time",
+            "in": "query",
+            "description": "The time one of the section's meetings starts",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "meetings.end_time",
+            "in": "query",
+            "description": "The time one of the section's meetings ends",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "meetings.modality",
+            "in": "query",
+            "description": "The modality of one of the section's meetings",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "meetings.location.building",
+            "in": "query",
+            "description": "The building of one of the section's meetings",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "meetings.location.room",
+            "in": "query",
+            "description": "The room of one of the section's meetings",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "meetings.location.map_uri",
+            "in": "query",
+            "description": "A hyperlink to the UTD room locator of one of the section's meetings",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "core_flags",
+            "in": "query",
+            "description": "One of core requirement codes this section fulfills",
             "required": false,
             "schema": {
               "type": "string"
